--- a/src/styles/_resets.scss
+++ b/src/styles/_resets.scss
@@ -1,7 +1,9 @@
 @use "./variables" as *;
-* {
+*,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  text-align: center;
 }
