Updated styles/colours and added updatePlayerDisplay() to help players keep track of turns

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,12 +9,16 @@ $color-black: #030303;
 $color-gray: #d4d4d4;
 
 // background colours
-$color-light: #bfdbed;
-$color-mid: #80b8db;
-$color-dark: #368abf;
+$color-board: #0050f1;
+$color-dark: #0e0c39;
+$color-purple: #47257d;
 
 // token colours
-$color-player1: #d12424;
-$color-player1--accent: #e46262;
-$color-player2: #ece509;
-$color-player2--accent: #f9f462;
+$color-player1: #ff2e2e;
+$color-player1--accent: #6a0606;
+$color-player2: #fff70f;
+$color-player2--accent: #989803;
+
+// font colours
+
+$color-game-info: #f200ff;
