--- a/src/styles/_player-info.scss
+++ b/src/styles/_player-info.scss
@@ -6,15 +6,22 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    color: $color-white;
   }
 
   &__player1,
   &__player2 {
-    border: black dashed 3px;
     padding: 0.5em 1em;
     display: flex;
     align-items: center;
     gap: 1rem;
+  }
+
+  &__player1 {
+    border: $color-player1 solid 2px;
+  }
+  &__player2 {
+    border: $color-player2 solid 2px;
   }
 
   &__token {
@@ -24,19 +31,11 @@
 
     &--red {
       outline: solid 1px $color-player1;
-      background-color: $color-player1;
-      background: radial-gradient(
-        $color-player1 1em,
-        $color-player1--accent 1.2em
-      );
+      background: radial-gradient($color-player1, $color-player1--accent);
     }
     &--yellow {
       outline: solid 2px $color-player2;
-      background-color: $color-player2;
-      background: radial-gradient(
-        $color-player2 1em,
-        $color-player2--accent 1.2em
-      );
+      background: radial-gradient($color-player2, $color-player2--accent);
     }
   }
 }
