created setWinnerStyles to highlight winning move

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -95,7 +95,7 @@
     .window {
       filter: drop-shadow(-4px 4px 0 $color-dark);
       border-radius: 50%;
-      background-color: $color-dark;
+      background-color: $color-white;
     }
   }
 }
