--- a/src/styles/_player-info.scss
+++ b/src/styles/_player-info.scss
@@ -40,3 +40,17 @@
     }
   }
 }
+
+@media only screen and (min-width: 768px) {
+  .header {
+    &__elements {
+      max-width: 768px;
+      margin: 2rem auto;
+    }
+  }
+  .game {
+    &__playerInfo {
+      gap: 10rem;
+    }
+  }
+}
