--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,112 +1,6 @@
 @use "./resets";
 @use "./variables" as *;
 @use "./player-info";
-
-#page {
-  background-image: linear-gradient(
-    120deg,
-    $color-black,
-    $color-dark,
-    $color-purple
-  );
-}
-.header {
-  padding-top: 1em;
-  color: $color-white;
-  font-size: 1.5rem;
-  -webkit-text-fill-color: $color-dark;
-  -webkit-text-stroke: 1px;
-  .game-info {
-    padding-top: 1.5em;
-    font-size: 1.5rem;
-    width: 50%;
-    height: 10vh;
-    display: inline-block;
-    color: $color-game-info;
-  }
-  .reset-button {
-    padding: 0.5em 1em;
-    border: 2px $color-purple solid;
-    border-radius: 15px;
-    background-color: $color-game-info;
-    color: $color-purple;
-  }
-  .reset-button:hover {
-    color: $color-white;
-    border: 2px $color-white solid;
-  }
-}
-
-.game {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 1rem;
-    padding: 1em;
-
-    .column {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 1rem;
-
-      .filled {
-        filter: none;
-        border: $color-black;
-      }
-
-      .window {
-        height: 4vh;
-        background-color: $color-gray;
-      }
-      .red-token {
-        background-color: $color-player1;
-      }
-      .yellow-token {
-        background-color: $color-player2;
-      }
-    }
-  }
-
-  &__board {
-    height: 40vh;
-    background-color: $color-board;
-    margin: 0 1rem;
-    border: solid white;
-    box-shadow: 5px -5px 2px $color-black;
-    position: relative;
-
-    &::before {
-      content: "";
-      width: 100%;
-      display: block;
-      height: 10%;
-      background-color: $color-board;
-      border-radius: 10px;
-      opacity: 0.5;
-      position: absolute;
-      z-index: -1;
-      top: -10%;
-    }
-    // work in progress to build board legs
-    // &::after {
-    //   content: "";
-    //   background-color: white;
-    //   width: 100%;
-    //   height: 10%;
-    //   display: block;
-    //   position: absolute;
-    //   bottom: -10%;
-    // }
-
-    .window {
-      filter: drop-shadow(-4px 4px 0 $color-dark);
-      border-radius: 50%;
-      background-color: $color-white;
-    }
-  }
-}
+@use "./header";
+@use "./game";
+@use "./page";
