--- a/src/styles/_player-info.scss
+++ b/src/styles/_player-info.scss
@@ -2,7 +2,7 @@
 
 .game {
   &__playerInfo {
-    margin-inline: 1rem;
+    margin-top: 3rem;
     height: 20vh;
     display: flex;
     justify-content: space-evenly;
